--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -119,15 +119,31 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Colour.cpp" />
+    <ClCompile Include="FileReader.cpp" />
+    <ClCompile Include="FileWriter.cpp" />
+    <ClCompile Include="GateTimer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Noise.cpp" />
     <ClCompile Include="Random.cpp" />
+    <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="UV.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Angle.h" />
     <ClInclude Include="Clamp.h" />
     <ClInclude Include="Colour.h" />
+    <ClInclude Include="Distance.h" />
+    <ClInclude Include="FileReader.h" />
+    <ClInclude Include="FileWriter.h" />
+    <ClInclude Include="GateTimer.h" />
+    <ClInclude Include="Lerp.h" />
+    <ClInclude Include="Max.h" />
+    <ClInclude Include="Min.h" />
+    <ClInclude Include="Noise.h" />
     <ClInclude Include="ProportionList.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="SimplexNoise.h" />
+    <ClInclude Include="StopWatch.h" />
     <ClInclude Include="UV.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
