--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -119,12 +119,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Colour.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="GateTimer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Noise.cpp" />
     <ClCompile Include="Random.cpp" />
+    <ClCompile Include="RuntimeConstants.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="UV.cpp" />
   </ItemGroup>
@@ -133,6 +135,7 @@
     <ClInclude Include="Clamp.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Distance.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="FileWriter.h" />
     <ClInclude Include="GateTimer.h" />
@@ -140,8 +143,12 @@
     <ClInclude Include="Max.h" />
     <ClInclude Include="Min.h" />
     <ClInclude Include="Noise.h" />
+    <ClInclude Include="Notify.h" />
+    <ClInclude Include="Not_Null.h" />
+    <ClInclude Include="Owner.h" />
     <ClInclude Include="ProportionList.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="RuntimeConstants.h" />
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="StopWatch.h" />
     <ClInclude Include="UV.h" />
