--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -78,6 +78,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;freetype26.lib;SDL2_ttf.lib;SDL2_image.lib;Box2DDebug.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -103,6 +104,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;freetype26.lib;SDL2_ttf.lib;SDL2_image.lib;Box2D.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -131,7 +133,9 @@
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Noise.cpp" />
+    <ClCompile Include="OrthographicCamera.cpp" />
     <ClCompile Include="Random.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="RenderingEngine.cpp" />
     <ClCompile Include="ResourceLocation.cpp" />
     <ClCompile Include="RuntimeConstants.cpp" />
@@ -170,9 +174,11 @@
     <ClInclude Include="Noise.h" />
     <ClInclude Include="Notify.h" />
     <ClInclude Include="Not_Null.h" />
+    <ClInclude Include="OrthographicCamera.h" />
     <ClInclude Include="Owner.h" />
     <ClInclude Include="ProportionList.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="RenderingEngine.h" />
     <ClInclude Include="ResourceLocation.h" />
     <ClInclude Include="RuntimeConstants.h" />
