--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="JsonReadWriter.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="Noise.cpp" />
     <ClCompile Include="OrthographicCamera.cpp" />
     <ClCompile Include="Random.cpp" />
@@ -148,6 +149,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureAsset.cpp" />
     <ClCompile Include="TextureSheet.cpp" />
+    <ClCompile Include="TransitionState.cpp" />
     <ClCompile Include="UV.cpp" />
     <ClCompile Include="VBO.cpp" />
     <ClCompile Include="VBOBatcher.cpp" />
@@ -156,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="AABB.h" />
     <ClInclude Include="Angle.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Conversion.h" />
     <ClInclude Include="Exit.h" />
     <ClInclude Include="Game.h" />
@@ -177,6 +180,7 @@
     <ClInclude Include="Lerp.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Max.h" />
+    <ClInclude Include="MenuState.h" />
     <ClInclude Include="Min.h" />
     <ClInclude Include="Noise.h" />
     <ClInclude Include="Notify.h" />
@@ -196,6 +200,7 @@
     <ClInclude Include="TextureAsset.h" />
     <ClInclude Include="TextureSheet.h" />
     <ClInclude Include="TimingType.h" />
+    <ClInclude Include="TransitionState.h" />
     <ClInclude Include="UV.h" />
     <ClInclude Include="VBO.h" />
     <ClInclude Include="VBOBatcher.h" />
