--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -123,6 +123,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioManager.cpp" />
+    <ClCompile Include="FontAsset.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GenericShaderObject.cpp" />
@@ -147,6 +148,9 @@
     <ClCompile Include="ShaderObject.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="SplashState.cpp" />
+    <ClCompile Include="TextRectangle.cpp" />
+    <ClCompile Include="TextRenderer.cpp" />
+    <ClCompile Include="TextResource.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureAsset.cpp" />
     <ClCompile Include="TextureSheet.cpp" />
@@ -163,6 +167,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Conversion.h" />
     <ClInclude Include="Exit.h" />
+    <ClInclude Include="FontAsset.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GenericShaderObject.h" />
@@ -198,6 +203,9 @@
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SplashState.h" />
     <ClInclude Include="StopWatch.h" />
+    <ClInclude Include="TextRectangle.h" />
+    <ClInclude Include="TextRenderer.h" />
+    <ClInclude Include="TextResource.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureAsset.h" />
     <ClInclude Include="TextureSheet.h" />
